[package]
name = "asice"
version = "0.2.1"
edition = "2024"
description = "ASiC-E container format (ETSI EN 319 162-1) with the BDOC profile"
license = "Apache-2.0"
homepage = "https://github.com/takakv/asice-rs"
repository = "https://github.com/takakv/asice-rs"
keywords = ["asice", "eidas", "bdoc", "digidoc"]

[dependencies]
thiserror = "2.0.18"
uppsala = "0.9.0"
zip = "8.6.0"
